# youdao_trans

./: .gitignore  LICENSE  README.md  build-installer.ps1  build-portable.ps1  index.html  package-lock.json  package.json  popup.html  screenshot.html  vite.config.js
models/ocr/: PP-OCRv6_medium_det.onnx
models/ocr/PaddleOCR/: PP-OCRv6_medium_rec.onnx
src/: App.vue  main.js  popup.js  screenshot.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  capture.rs  config.rs  constants.rs  dict.rs  download.rs  history.rs  hotkey.rs  lib.rs  ocr.rs  selection.rs  translate.rs  tray.rs  tts.rs  util.rs  window.rs
src-tauri/src/ocr/: baidu.rs  ollama.rs  paddle.rs  tencent.rs  xunfei.rs
src-tauri/src/translate/: aliyun.rs  baidu.rs  deeplx.rs  google.rs  microsoft.rs  microsoft_common.rs  microsoft_free.rs  ollama.rs  openai.rs  youdao.rs
src-tauri/src/tts/: edge.rs
src-tauri/windows/: installer.nsi
src/assets/styles/: common.css
src/components/: AppSidebar.vue  NumberInput.vue  PasswordField.vue  SelectInput.vue  ServiceConfigLayout.vue  SwitchToggle.vue  TitleBar.vue  ToolIcon.vue
src/composables/: useDebounce.js  useHotkey.js  useServiceConfig.js  useSettings.js  useTheme.js  useToast.js  useTts.js  useUtils.js
src/router/: index.js
src/views/: Dictionary.vue  History.vue  ScreenshotOverlay.vue  SelectionPopupStandalone.vue  Settings.vue  Translate.vue
src/views/settings/: About.vue  Advanced.vue  Hotkey.vue  Ocr.vue  Preference.vue  Translator.vue  index.vue
