[package]
name = "app"
version = "1.0.5"
description = "一款简洁、高效、高颜值的输入、截图、划词翻译软件"
authors = ["GCC"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-log = "2"
screenshots = "0.8"
mouse_position = "0.1.0"
time = "0.3"
aes-gcm = "0.10"
sha2 = "0.10"
machine-uid = "0.5"
dirs = "6"
base64 = "0.22"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2.5.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"
tokio = { version = "1", features = ["full"] }
arboard = "3"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
image = "0.25"
oar-ocr = "0.7"
hf-fetch-model = { version = "0.10", default-features = false }
